src/objects/Response_Item__c.object
<CustomObject>
    <fields>
        <fullName>For_Query__c</fullName>
        <label>For Query</label>
        <referenceTo>Query__c</referenceTo>
        <relationshipLabel>Response Items</relationshipLabel>
        <relationshipName>Response_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Description__c</fullName>
        <label>Response Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Link__c</fullName>
        <label>Response Link</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Title__c</fullName>
        <label>Response Title</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Response Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{00000}</displayFormat>
        <label>Response Item Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>